--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.17.2",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
